src/objects/Office_Zip_Code__c.object
<CustomObject>
    <fields>
        <fullName>Main_City__c</fullName>
        <label>Main City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main county that this zip code resides within. This field is populated manually.</description>
        <inlineHelpText>The main county that this zip code resides within. This field is populated manually.</inlineHelpText>
        <label>Main County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Office Zip Codes</relationshipLabel>
        <relationshipName>Office_Zip_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Priority__c</fullName>
        <description>The numerical marketing priority that has been set for this zip code. The Pricing &amp; Analysis team uses an internal formula to calculate this value. This field is populated manually.</description>
        <inlineHelpText>The numerical marketing priority that has been set for this zip code. The Pricing &amp; Analysis team uses an internal formula to calculate this value. This field is populated manually.</inlineHelpText>
        <label>Marketing Priority</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_75k_Total_OOH__c</fullName>
        <description>Total Owner-Occupied Households with income above $75,000 divided by the total number of Owner-Occupied Households. This field is populated manually by the Pricing &amp; Analysis team. They use census data to figure this out.</description>
        <inlineHelpText>Total Owner-Occupied Households with income above $75,000 divided by the total number of Owner-Occupied Households. This field is populated manually by the Pricing &amp; Analysis team. They use census data to figure this out.</inlineHelpText>
        <label>OOH 75k/Total OOH</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The office this zip code is assigned to. This field is populated manually.</description>
        <inlineHelpText>The office this zip code is assigned to. This field is populated manually.</inlineHelpText>
        <label>Office Location</label>
        <referenceTo>Office_Location__c</referenceTo>
        <relationshipLabel>Office Zip Codes</relationshipLabel>
        <relationshipName>Office_Zip_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>A categorization of priority. This field is populated manually.</description>
        <inlineHelpText>A categorization of priority. This field is populated manually.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for reference, and may be re-worked. There are Zip Codes that cross state lines. A Junction Object may be more appropriate in the future, or supplying a Geo-Lat-Long point for each Zip Code would also aid in reporting</description>
        <inlineHelpText>This is for reference, and may be re-worked. There are Zip Codes that cross state lines. A Junction Object may be more appropriate in the future, or supplying a Geo-Lat-Long point for each Zip Code would also aid in reporting</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Office Zip Codes</relationshipLabel>
        <relationshipName>Office_Zip_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_OOH_75k__c</fullName>
        <description>Total Owner-Occupied Households with incomes above $75,000. This field is populated manually by the Pricing &amp; Analysis team. They use census data to figure this out.</description>
        <inlineHelpText>Total Owner-Occupied Households with incomes above $75,000. This field is populated manually by the Pricing &amp; Analysis team. They use census data to figure this out.</inlineHelpText>
        <label>Total OOH 75k</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Copy__c</fullName>
        <description>This is a copy field (populated by the Zip Code Copy Process) that has validation set up to prevent duplicate records. Right now, it only accepts 5 digits for a zip code. If we expand to Canada or somewhere that has letters for zip codes, the validation rules will need to be adjusted.</description>
        <inlineHelpText>This is a copy field (populated by the Zip Code Copy Process) that has validation set up to prevent duplicate records. Right now, it only accepts 5 digits for a zip code.</inlineHelpText>
        <label>Zip Code Copy</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Office Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Main_City__c</columns>
        <columns>Office_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Office Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zip_Code_must_be_5_digits</fullName>
        <active>true</active>
        <description>Right now, this field only accepts 5 digits for a zip code. If we expand to Canada or somewhere that has letters for zip codes, this validation rule will need to be adjusted.</description>
        <errorConditionFormula>!REGEX(Name, &quot;^\\d{5}?$&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Zip Code must be 5 digits</errorMessage>
    </validationRules>
</CustomObject>